--- a/package.json
+++ b/package.json
@@ -38,8 +38,9 @@
         "dtsbundler-webpack-plugin": "github:stefan-lacatus/dtsbundler-webpack-plugin#master",
         "extract-text-webpack-plugin": "^3.0.2",
         "file-loader": "^2.0.0",
-        "google-charts": "^1.5.0",
+        "node-sass": "^4.9.4",
         "request": "^2.88.0",
+        "sass-loader": "^7.1.0",
         "source-map-loader": "^0.2.4",
         "style-loader": "^0.23.1",
         "ts-loader": "^5.2.2",
@@ -52,6 +53,7 @@
         "zip-webpack-plugin": "^3.0.0"
     },
     "dependencies": {
+        "frappe-gantt": "0.3.0",
         "typescriptwebpacksupport": "github:stefan-lacatus/ThingworxWidgetSupportPackage#master"
     }
 }
