--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "GanttChart",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "Gantt chart widget based on google charts",
     "packageName": "GanttChartExtension",
     "thingworxServer": "http://localhost:8016",
@@ -26,34 +26,34 @@
     },
     "license": "ISC",
     "devDependencies": {
-        "@babel/core": "^7.1.2",
-        "@babel/preset-env": "^7.1.0",
-        "@types/jquery": "^3.3.21",
-        "@types/node": "^10.12.0",
-        "@types/webpack-env": "^1.13.6",
-        "babel-loader": "^8.0.4",
+        "@babel/core": "^7.5.5",
+        "@babel/preset-env": "^7.5.5",
+        "@types/jquery": "^3.3.31",
+        "@types/node": "^10.14.15",
+        "@types/webpack-env": "^1.14.0",
+        "babel-loader": "^8.0.6",
         "clean-webpack-plugin": "^0.1.19",
-        "copy-webpack-plugin": "^4.5.4",
-        "css-loader": "^1.0.0",
+        "copy-webpack-plugin": "^4.6.0",
+        "css-loader": "^1.0.1",
         "dtsbundler-webpack-plugin": "github:stefan-lacatus/dtsbundler-webpack-plugin#master",
         "extract-text-webpack-plugin": "^3.0.2",
         "file-loader": "^2.0.0",
-        "node-sass": "^4.9.4",
+        "node-sass": "^4.12.0",
         "request": "^2.88.0",
-        "sass-loader": "^7.1.0",
+        "sass-loader": "^7.2.0",
         "source-map-loader": "^0.2.4",
         "style-loader": "^0.23.1",
-        "ts-loader": "^5.2.2",
-        "typescript": "^3.1.3",
+        "ts-loader": "^5.4.5",
+        "typescript": "^3.5.3",
         "url-loader": "^1.1.2",
-        "webpack": "^4.22.0",
-        "webpack-cli": "^3.1.2",
-        "webpack-dev-server": "^3.1.9",
+        "webpack": "^4.39.2",
+        "webpack-cli": "^3.3.7",
+        "webpack-dev-server": "^3.8.0",
         "xml2js": "^0.4.19",
         "zip-webpack-plugin": "^3.0.0"
     },
     "dependencies": {
         "frappe-gantt": "0.3.0",
-        "typescriptwebpacksupport": "github:stefan-lacatus/ThingworxWidgetSupportPackage#master"
+        "typescriptwebpacksupport": "^1.1.0"
     }
 }
