--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
     "packageName": "GanttChartExtension",
     "thingworxServer": "http://localhost:8016",
     "thingworxUser": "Administrator",
-    "thingworxPassword": "admin",
-    "author": "Thingworx RoIcenter",
+    "thingworxPassword": "Administrator12345",
+    "author": "Thingworx RoIcenter placatus",
     "minimumThingWorxVersion": "6.0.0",
-    "homepage": "http://roicentersvn/placatus/GantChartExtension",
+    "homepage": "https://github.com/ptc-iot-sharing/GanttChartWidgetWidgetTWX",
     "autoUpdate": {
-        "giteaURL": "http://roicentersvn/api/v1/repos/placatus/GantChartExtension/releases/latest"
+        "gitHubURL": "https://api.github.com/repos/ptc-iot-sharing/GantChartExtensionTWX/releases/latest"
     },
     "repository": {
         "type": "git",
-        "url": "http://roicentersvn.ptcnet.ptc.com/placatus/GantChartExtension.git"
+        "url": "https://github.com/ptc-iot-sharing/GantChartExtensionTWX.git"
     },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
@@ -27,28 +27,32 @@
     "license": "ISC",
     "devDependencies": {
         "@babel/core": "^7.5.5",
+        "@babel/plugin-syntax-dynamic-import": "^7.2.0",
         "@babel/preset-env": "^7.5.5",
         "@types/jquery": "^3.3.31",
         "@types/node": "^10.14.15",
         "@types/webpack-env": "^1.14.0",
-        "babel-loader": "^8.0.6",
-        "clean-webpack-plugin": "^0.1.19",
-        "copy-webpack-plugin": "^4.6.0",
-        "css-loader": "^1.0.1",
+        "babel-loader": "^8.0.5",
+        "clean-webpack-plugin": "^3.0.0",
+        "copy-webpack-plugin": "^5.0.4",
+        "css-loader": "^3.2.0",
         "dtsbundler-webpack-plugin": "github:stefan-lacatus/dtsbundler-webpack-plugin#master",
         "extract-text-webpack-plugin": "^3.0.2",
-        "file-loader": "^2.0.0",
+        "file-loader": "^4.2.0",
+        "fork-ts-checker-webpack-plugin": "^1.5.0",
         "node-sass": "^4.12.0",
         "request": "^2.88.0",
         "sass-loader": "^7.2.0",
+        "script-loader": "^0.7.2",
         "source-map-loader": "^0.2.4",
         "style-loader": "^0.23.1",
-        "ts-loader": "^5.4.5",
+        "ts-loader": "^6.0.4",
         "typescript": "^3.5.3",
-        "url-loader": "^1.1.2",
+        "url-loader": "^2.1.0",
         "webpack": "^4.39.2",
         "webpack-cli": "^3.3.7",
         "webpack-dev-server": "^3.8.0",
+        "webpack-encoding-plugin": "^0.3.1",
         "xml2js": "^0.4.19",
         "zip-webpack-plugin": "^3.0.0"
     },
